--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -466,6 +466,107 @@
             }
 
 
+
+            /* [iOS 최적화] 글로벌 레이아웃 리셋 */
+            html,
+            body {
+                overflow-x: hidden !important;
+                width: 100% !important;
+                position: relative;
+                -webkit-text-size-adjust: 100%;
+            }
+
+            /* 헤더 고정 및 너비 100% 보장 (상태바 대응) */
+            .main-header {
+                width: 100vw !important;
+                max-width: 100% !important;
+                left: 0 !important;
+                right: 0 !important;
+                padding-top: calc(16px + env(safe-area-inset-top)) !important;
+                padding-bottom: 20px !important;
+                box-sizing: border-box !important;
+                position: sticky !important;
+                top: 0;
+                z-index: 1000;
+            }
+
+            /* 상세 화면: 불필요한 데스크톱 툴바 숨김 */
+            .action-toolbar,
+            .customer-header-actions,
+            .print-btn-group,
+            .header-info-actions {
+                display: none !important;
+            }
+
+            /* 상세 화면: 정보 카드 최적화 */
+            .customer-header-card {
+                padding: 20px 16px !important;
+                width: 100% !important;
+                border-radius: 0 !important;
+                margin: 0 !important;
+                border: none !important;
+                border-bottom: 1px solid #f2f2f7 !important;
+            }
+
+            .header-info-main {
+                flex-direction: column !important;
+                align-items: flex-start !important;
+                gap: 12px;
+            }
+
+            .header-title-row {
+                flex-wrap: wrap;
+                gap: 8px;
+            }
+
+            /* 상세 화면: 탭 메뉴 가로 스크롤 */
+            .modules-tabs {
+                display: flex !important;
+                flex-wrap: nowrap !important;
+                overflow-x: auto !important;
+                -webkit-overflow-scrolling: touch;
+                padding: 0 16px !important;
+                gap: 12px !important;
+                background: #fff;
+                border-bottom: 1px solid #e5e5ea;
+                scrollbar-width: none;
+            }
+
+            .modules-tabs::-webkit-scrollbar {
+                display: none;
+            }
+
+            .tab-btn {
+                flex: 0 0 auto !important;
+                margin-bottom: 0 !important;
+                padding: 12px 4px !important;
+            }
+
+            /* 체크리스트: 통계 카드 2열 그리드 */
+            .checklist-stats {
+                display: grid !important;
+                grid-template-columns: 1fr 1fr !important;
+                gap: 10px !important;
+                padding: 16px !important;
+            }
+
+            .stat-card {
+                margin: 0 !important;
+                min-width: 0 !important;
+            }
+
+            /* 체크리스트: 필터 세로 정렬 */
+            .checklist-filters {
+                flex-direction: column;
+                padding: 0 16px 16px 16px !important;
+            }
+
+            .checklist-filters select,
+            .checklist-filters input {
+                width: 100% !important;
+                max-width: none !important;
+            }
+
             .mobile-icon-btn {
                 width: 44px;
                 height: 44px;
